--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "bootstrap": "~3.0.2",
     "angular-route": "~1.2.0",
     "sass-bootstrap": "3.0.0",
-    "Font-Awesome": "~4.0.3"
+    "Font-Awesome": "~4.0.3",
+    "angular-bootstrap": "~0.6.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
